# ST-CNABench

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
conda/: README.md  install_all_envs.sh
configs/examples/cscc_demo/: data.yaml  eval.yaml  models.yaml
configs/templates/: data.template.yaml  eval.template.yaml  models.template.yaml
demo_data/cscc_demo/: README.md
docker/: README.md
docker/calicost/: Dockerfile
docker/clonalscope/: Dockerfile
docker/copykat/: Dockerfile
docker/infercnv/: Dockerfile
docker/numbat/: Dockerfile
docker/scevan/: Dockerfile
docker/starch/: Dockerfile
docker/xclone/: Dockerfile
docs/: data_preparation.md  evaluation.md  external_tools.md  index.md  installation.md  model_run.md  overview.md  reference_data.md
docs/tutorials/: cna_profile_hcc2t.md  cnv_profile_hcc2t.md  dataset_properties_quick_check.md  high_resolution_st_exploration.md  quickstart_demo.md  subclone_identification_slidednaseq.md  tumor_normal_hcc2t.md  use_your_own_dataset.md  use_your_own_model.md
external_tools/: README.md
refs/: README.md
refs/hg38_genome_info/: hg38_genes_simple.txt
refs/population_phasing/: README.md
src/st_cnabench/: __init__.py  cli.py
src/st_cnabench/dataset/: DatasetPreparator.py  __init__.py  prepare_data.py
src/st_cnabench/evaluate/: run_clone_evolution.py  run_cna_profile.py  run_cna_resolution.py  run_eval.py  (+3 more)
src/st_cnvbench/: __init__.py  cli.py  config.py
tests/: helpers.py  test_config_and_cli.py  test_demo_prep.py  test_hygiene.py  test_smoke_pipeline.py  test_wrappers.py
(+138 files in other folders)
